--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
 	<name>Java Home myweb</name>
 	<url>http://maven.apache.org</url>
 	
+	<plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.19.1</version>
+        </plugin>
+  </plugins>
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
 		<sonar.host.url>http://18.181.164.81:9000/</sonar.host.url>
